--- a/Views/ToDoList/Index.cshtml
+++ b/Views/ToDoList/Index.cshtml
@@ -57,7 +57,7 @@
                     @task.DateStart
                 </td>
                 <td width="15%">
-                    @task.DeadLine
+                    @task.Deadline
                 </td>
             </tr>
         }
@@ -71,7 +71,7 @@
             <p class="card-text">Description: @task.Description</p>
             <p class="card-text">Status: @task.Status</p>
             <p class="card-text">Start: @task.DateStart</p>
-            <p class="card-text">Deadline: @task.DeadLine</p>
+            <p class="card-text">Deadline: @task.Deadline</p>
       </div>
     </div>
     }
