--- a/Views/ToDoList/Create.cshtml
+++ b/Views/ToDoList/Create.cshtml
@@ -6,23 +6,34 @@
 			<h2 class="text-primary">Create a new task</h2>
 			<hr />
 		</div>
+		<div asp-validation-summary="All"></div>
 		<div class="mb-3">
 			<label asp-for="Content"></label>
 			<input asp-for="Content" class="form-control" />
+			<span asp-validation-for="Content" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
 			<label asp-for="Description"></label>
 			<input asp-for="Description" class="form-control" />
+			<span asp-validation-for="Description" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
 			<label asp-for="DateStart"></label>
 			<input asp-for="DateStart" class="form-control" />
+			<span asp-validation-for="DateStart" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
 			<label asp-for="Deadline"></label>
 			<input asp-for="Deadline" class="form-control" />
+			<span asp-validation-for="Deadline" class="text-danger"></span>
 		</div>
 		<button type="submit" class="btn btn-primary" style="150px">Create!</button>
 		<a asp-controller="ToDoList" asp-action="Index" class="btn btn-secondary" style="150px">Back to list</a>
 	</div>
 </form>
+
+@section Scripts {
+	@{
+		<partial name="_ValidationScriptsPartial" />
+	}
+}
