--- a/Views/ToDoList/Index.cshtml
+++ b/Views/ToDoList/Index.cshtml
@@ -1,125 +1,129 @@
 ﻿@model IEnumerable<ToDoList>
 @{
-    ViewData["Title"] = "Index";
+	ViewData["Title"] = "Index";
 }
 
 <div class="container p-3">
-    <div class="row pt-4">
-        <div class="col-6">
-            <h2 class="text-primary">My tasks</h2>
-        </div>
-        <div class="col-6 text-end">
-           <a asp-controller="ToDoList" asp-action="Create" class="btn btn-outline-secondary"><i class="bi bi-plus-square"></i> &nbsp; New Task!</a>
-        </div>
-    </div>
+	<div class="row pt-4">
+		<div class="col-6">
+			<h2 class="text-primary">My tasks</h2>
+		</div>
+		<div class="col-6 text-end">
+		   <a asp-controller="ToDoList" asp-action="Create" class="btn btn-outline-secondary"><i class="bi bi-plus-square"></i> &nbsp; New Task!</a>
+		</div>
+	</div>
 </div>
 </br>
 <!-- <table class = "table table-hover table-bordered">
-    <thead>
-        <tr>
-            <th scope="col">
-                Task
-            </th>
-            <th scope="col">
-                Description
-            </th>
-            <th scope="col">
-                Status
-            </th>
-            <th scope="col">
-                Created Date Time
-            </th>
-            <th scope="col">
-                Date Start
-            </th>
-            <th scope="col">
-                DeadLine
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-       /* @foreach(var task in Model)
-        {
-                <tr class="table-primary">
-                <td width="15%">
-                    @task.Content
-                </td>
-                <td width="25%">
-                    @task.Description
-                </td>
-                <td width="15%">
-                    @task.Status
-                </td>
-                <td width="15%">
-                    @task.CreatedDateTime
-                </td>
-                <td width="15%">
-                    @task.DateStart
-                </td>
-                <td width="15%">
-                    @task.Deadline
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>-->
-    @foreach(var task in Model) {
-    @if(task.Status == ToDo_List.Models.TaskStatus.Created)
-    {
-            <div class="card border-primary mb-3" style="max-width: 20rem; ">
-                <div class="card-header">Task dated @task.CreatedDateTime</div>
-                    <div class="card-body">
-                        <h4 class="card-title">@task.Content</h4>
-                        <p class="card-text">Description: @task.Description</p>
-                        <p class="card-text">Status: @task.Status</p>
-                        <p class="card-text">Start: @task.DateStart</p>
-                        <p class="card-text">Deadline: @task.Deadline</p>
-                    <div class="w-75 btn-group" role="group">
-                        <a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.Id"
-                        class="btn btn-outline-info">
-                           <i class="bi bi-pencil-square"></i> Edit
-                        </a>
-                    </div>
-                    </div>
-            </div>
-    }
-    @if(task.Status == ToDo_List.Models.TaskStatus.InProcess)
-    {
-                        <div class="card border-light mb-3" style="max-width: 20rem; ">
-                          <div class="card-header">Task dated @task.CreatedDateTime</div>
-                      <div class="card-body">
-                        <h4 class="card-title">@task.Content</h4>
-                            <p class="card-text">Description: @task.Description</p>
-                            <p class="card-text">Status: @task.Status</p>
-                            <p class="card-text">Start: @task.DateStart</p>
-                            <p class="card-text">Deadline: @task.Deadline</p>
-                            <div class="w-75 btn-group" role="group">
-                                <a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.Id"
-                   class="btn btn-outline-info">
-                                   <i class="bi bi-pencil-square"></i> Edit
-                                </a>
-                            </div>
-                      </div>
-                    </div>
-    }
-
-    @if (task.Status == ToDo_List.Models.TaskStatus.Doned)
-    {
-            <div class="card border-success mb-3" style="max-width: 20rem; ">
-                <div class="card-header">Task dated @task.CreatedDateTime</div>
-                <div class="card-body">
-                                <h4 class="card-title">@task.Content</h4>
-                                <p class="card-text">Description: @task.Description</p>
-                                <p class="card-text">Status: @task.Status</p>
-                                <p class="card-text">Start: @task.DateStart</p>
-                                <p class="card-text">Deadline: @task.Deadline</p>
-                            <div class="w-75 btn-group" role="group">
-                                <a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.Id"
-                                class="btn btn-outline-info">
-                                   <i class="bi bi-pencil-square"></i> Edit
-                                </a>
-                            </div>
-                </div>
-            </div>
-    }
+	<thead>
+		<tr>
+			<th scope="col">
+				Task
+			</th>
+			<th scope="col">
+				Description
+			</th>
+			<th scope="col">
+				Status
+			</th>
+			<th scope="col">
+				Created Date Time
+			</th>
+			<th scope="col">
+				Date Start
+			</th>
+			<th scope="col">
+				DeadLine
+			</th>
+		</tr>
+	</thead>
+	<tbody>
+	   /* @foreach (var task in Model)
+{
+						<tr class="table-primary">
+						<td width="15%">
+			@task.Content
+						</td>
+						<td width="25%">
+			@task.Description
+						</td>
+						<td width="15%">
+			@task.Status
+						</td>
+						<td width="15%">
+			@task.CreatedDateTime
+						</td>
+						<td width="15%">
+			@task.DateStart
+						</td>
+						<td width="15%">
+			@task.Deadline
+						</td>
+					</tr>
 }
+	</tbody>
+</table>-->
+<div class="container">
+	@foreach (var task in Model)
+	{
+			<div class="row">
+			@if (task.Status == ToDo_List.Models.TaskStatus.Created)
+			{
+				<div class="card border-primary mb-3 col order-first" style="max-width: 20rem; ">
+				  <div class="card-header">Task dated @task.CreatedDateTime</div>
+				  <div class="card-body">
+					<h4 class="card-title">@task.Content</h4>
+					<p class="card-text">Description: @task.Description</p>
+					<p class="card-text">Status: @task.Status</p>
+					<p class="card-text">Start: @task.DateStart</p>
+					<p class="card-text">Deadline: @task.Deadline</p>
+					<div class="w-75 btn-group" role="group">
+					  <a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.Id" class="btn btn-outline-info">
+						<i class="bi bi-pencil-square"></i> Edit </a>
+					  <a asp-controller="ToDoList" asp-action="Delete" asp-route-id="@task.Id" class="btn btn-outline-danger">
+						<i class="bi bi-trash"></i> Delete</a>
+					</div>
+				  </div>
+				</div>
+			}
+			@if (task.Status == ToDo_List.Models.TaskStatus.InProcess)
+			{
+				<div class="card border-light mb-3 col" style="max-width: 40rem; ">
+				  <div class="card-header">Task dated @task.CreatedDateTime</div>
+				  <div class="card-body">
+					<h4 class="card-title">@task.Content</h4>
+					<p class="card-text">Description: @task.Description</p>
+					<p class="card-text">Status: @task.Status</p>
+					<p class="card-text">Start: @task.DateStart</p>
+					<p class="card-text">Deadline: @task.Deadline</p>
+					<div class="w-75 btn-group" role="group">
+					  <a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.Id" class="btn btn-outline-info">
+						<i class="bi bi-pencil-square"></i> Edit </a>
+					  <a asp-controller="ToDoList" asp-action="Delete" asp-route-id="@task.Id" class="btn btn-outline-danger">
+						<i class="bi bi-trash"></i> Delete</a>
+					</div>
+				  </div>
+				</div>
+			}
+			@if (task.Status == ToDo_List.Models.TaskStatus.Doned)
+			{
+				<div class="card border-success mb-3 col order-last" style="max-width: 60rem; ">
+				  <div class="card-header">Task dated @task.CreatedDateTime</div>
+				  <div class="card-body">
+					<h4 class="card-title">@task.Content</h4>
+					<p class="card-text">Description: @task.Description</p>
+					<p class="card-text">Status: @task.Status</p>
+					<p class="card-text">Start: @task.DateStart</p>
+					<p class="card-text">Deadline: @task.Deadline</p>
+					<div class="w-75 btn-group" role="group">
+					  <a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.Id" class="btn btn-outline-info">
+						<i class="bi bi-pencil-square"></i> Edit </a>
+					  <a asp-controller="ToDoList" asp-action="Delete" asp-route-id="@task.Id" class="btn btn-outline-danger">
+						<i class="bi bi-trash"></i> Delete</a>
+					</div>
+				  </div>
+				</div>
+			}
+			</div>
+	}
+</div>  
