--- a/Views/ToDoList/Delete.cshtml
+++ b/Views/ToDoList/Delete.cshtml
@@ -11,11 +11,10 @@
 		<div class="mb-3">
 			<label asp-for="Content"></label>
 			<input asp-for="Content" class="form-control" disabled/>
-			<span asp-validation-for="Content" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
 			<label asp-for="Description"></label>
-			<input asp-for="Description" class="form-control" disabled/>
+			<textarea asp-for="Description" class="form-control" disabled></textarea>
 		</div>
 		<div class="mb-3">
 			<label asp-for="Status"></label>
