Updated views for new two fields

--- a/Views/ToDoList/Delete.cshtml
+++ b/Views/ToDoList/Delete.cshtml
@@ -13,8 +13,16 @@
 			<input asp-for="Content" class="form-control" disabled/>
 		</div>
 		<div class="mb-3">
+			<label asp-for="Importance"></label>
+			<input asp-for="Importance" class="form-control" disabled/>
+		</div>
+		<div class="mb-3">
 			<label asp-for="Description"></label>
 			<textarea asp-for="Description" class="form-control" disabled></textarea>
+		</div>
+		<div class="mb-3">
+			<label asp-for="Note"></label>
+			<textarea asp-for="Note" class="form-control" disabled></textarea>
 		</div>
 		<div class="mb-3">
 			<label asp-for="Status"></label>
