--- a/Views/ToDoList/Index.cshtml
+++ b/Views/ToDoList/Index.cshtml
@@ -72,7 +72,9 @@
 				  <div class="card-header">Task dated @task.CreatedDateTime</div>
 				  <div class="card-body">
 					<h4 class="card-title">@task.Content</h4>
+					<p class="card-text">Importance: @task.Importance</p>
 					<p class="card-text">Description: @task.Description</p>
+					<p class="card-text">Notes: @task.Note</p>
 					<p class="card-text">Status: @task.Status</p>
 					<p class="card-text">Start: @task.DateStart</p>
 					<p class="card-text">Deadline: @task.Deadline</p>
@@ -91,7 +93,9 @@
 				  <div class="card-header">Task dated @task.CreatedDateTime</div>
 				  <div class="card-body">
 					<h4 class="card-title">@task.Content</h4>
+					<p class="card-text">Importance: @task.Importance</p>
 					<p class="card-text">Description: @task.Description</p>
+					<p class="card-text">Notes: @task.Note</p>
 					<p class="card-text">Status: @task.Status</p>
 					<p class="card-text">Start: @task.DateStart</p>
 					<p class="card-text">Deadline: @task.Deadline</p>
@@ -110,7 +114,9 @@
 				  <div class="card-header">Task dated @task.CreatedDateTime</div>
 				  <div class="card-body">
 					<h4 class="card-title">@task.Content</h4>
+					<p class="card-text">Importance: @task.Importance</p>
 					<p class="card-text">Description: @task.Description</p>
+					<p class="card-text">Notes: @task.Note</p>
 					<p class="card-text">Status: @task.Status</p>
 					<p class="card-text">Start: @task.DateStart</p>
 					<p class="card-text">Deadline: @task.Deadline</p>
