--- a/Views/ToDoList/Create.cshtml
+++ b/Views/ToDoList/Create.cshtml
@@ -13,10 +13,18 @@
 			<span asp-validation-for="Content" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
+			<label asp-for="Importance"></label>
+			<input asp-for="Importance" class="form-control" />
+			<span asp-validation-for="Importance" class="text-danger"></span>
+		</div>
+		<div class="mb-3">
 			<label asp-for="Description"></label>
-			<!--<input asp-for="Description" class="form-control" /> -->
 			<textarea asp-for="Description" class="form-control"></textarea>
 			<span asp-validation-for="Description" class="text-danger"></span>
+		</div>
+		<div class="mb-3">
+			<label asp-for="Note"></label>
+			<textarea asp-for="Note" class="form-control"></textarea>
 		</div>
 		<div class="mb-3">
 			<label asp-for="DateStart"></label>
