--- a/Views/ToDoList/Index.cshtml
+++ b/Views/ToDoList/Index.cshtml
@@ -63,12 +63,13 @@
 	</tbody>
 </table>-->
 <div class="container">
+	
 	@foreach (var task in Model)
 	{
-			<div class="row">
+	<div class="row">	
 			@if (task.Status == ToDo_List.Models.TaskStatus.Created)
 			{
-				<div class="card border-primary mb-3 col order-first" style="max-width: 20rem; ">
+				<div class="card border-primary mb-3 col order-first" style="max-width: 20rem;">
 				  <div class="card-header">Task dated @task.CreatedDateTime</div>
 				  <div class="card-body">
 					<h4 class="card-title">@task.Content</h4>
@@ -80,7 +81,7 @@
 					<p class="card-text">Deadline: @task.Deadline</p>
 					<div class="w-75 btn-group" role="group">
 					  <a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.Id" class="btn btn-outline-info">
-						<i class="bi bi-pencil-square"></i> Edit </a>
+						<i class="bi bi-pencil-square"></i> Edit </a> &nbsp &nbsp;
 					  <a asp-controller="ToDoList" asp-action="Delete" asp-route-id="@task.Id" class="btn btn-outline-danger">
 						<i class="bi bi-trash"></i> Delete</a>
 					</div>
@@ -89,7 +90,7 @@
 			}
 			@if (task.Status == ToDo_List.Models.TaskStatus.InProcess)
 			{
-				<div class="card border-light mb-3 col" style="max-width: 40rem; ">
+				<div class="card border-light mb-3 col" style="max-width: 30rem; ">
 				  <div class="card-header">Task dated @task.CreatedDateTime</div>
 				  <div class="card-body">
 					<h4 class="card-title">@task.Content</h4>
@@ -99,9 +100,9 @@
 					<p class="card-text">Status: @task.Status</p>
 					<p class="card-text">Start: @task.DateStart</p>
 					<p class="card-text">Deadline: @task.Deadline</p>
-					<div class="w-75 btn-group" role="group">
+					<div class="w-75 btn-group align-items-center" role="group">
 					  <a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.Id" class="btn btn-outline-info">
-						<i class="bi bi-pencil-square"></i> Edit </a>
+						<i class="bi bi-pencil-square"></i> Edit </a> &nbsp &nbsp;
 					  <a asp-controller="ToDoList" asp-action="Delete" asp-route-id="@task.Id" class="btn btn-outline-danger">
 						<i class="bi bi-trash"></i> Delete</a>
 					</div>
@@ -110,7 +111,7 @@
 			}
 			@if (task.Status == ToDo_List.Models.TaskStatus.Doned)
 			{
-				<div class="card border-success mb-3 col order-last" style="max-width: 60rem; ">
+				<div class="card border-success mb-3 col order-last" style="max-width: 30rem; ">
 				  <div class="card-header">Task dated @task.CreatedDateTime</div>
 				  <div class="card-body">
 					<h4 class="card-title">@task.Content</h4>
@@ -122,13 +123,14 @@
 					<p class="card-text">Deadline: @task.Deadline</p>
 					<div class="w-75 btn-group" role="group">
 					  <a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.Id" class="btn btn-outline-info">
-						<i class="bi bi-pencil-square"></i> Edit </a>
+						<i class="bi bi-pencil-square"></i> Edit </a> &nbsp &nbsp;
 					  <a asp-controller="ToDoList" asp-action="Delete" asp-route-id="@task.Id" class="btn btn-outline-danger">
 						<i class="bi bi-trash"></i> Delete</a>
 					</div>
 				  </div>
 				</div>
 			}
-			</div>
+	</div>			
 	}
+	
 </div>  
