--- a/Views/ToDoList/Delete.cshtml
+++ b/Views/ToDoList/Delete.cshtml
@@ -36,8 +36,8 @@
 			<label asp-for="Deadline"></label>
 			<input asp-for="Deadline" class="form-control" disabled/>
 		</div>
-		<button type="submit" class="btn btn-danger" style="150px">Remove</button>
-		<a asp-controller="ToDoList" asp-action="Index" class="btn btn-secondary" style="150px">Back to list</a>
+		<button type="submit" class="btn btn-danger" style="width: 150px">Remove</button>
+		<a asp-controller="ToDoList" asp-action="Index" class="btn btn-secondary" style="width: 150px">Back to list</a>
 	</div>
 </form>
 
