--- a/Views/ToDoList/Edit.cshtml
+++ b/Views/ToDoList/Edit.cshtml
@@ -13,9 +13,12 @@
 			<span asp-validation-for="Content" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
-			<label asp-for="Importance"></label>
-			<input asp-for="Importance" class="form-control" />
-			<span asp-validation-for="Importance" class="text-danger"></span>
+		  <label asp-for="Importance"></label>
+		  <select class="form-control" id="exampleSelect1" asp-for="Importance">
+			<option>@ToDo_List.Models.Importance.Low</option>
+			<option>@ToDo_List.Models.Importance.Medium</option>
+			<option>@ToDo_List.Models.Importance.High</option>
+		  </select>
 		</div>
 		<div class="mb-3">
 			<label asp-for="Description"></label>
@@ -27,9 +30,12 @@
 			<textarea asp-for="Note" class="form-control"></textarea>
 		</div>
 		<div class="mb-3">
-			<label asp-for="Status"></label>
-			<input asp-for="Status" class="form-control" />
-			<span asp-validation-for="Status" class="text-danger"></span>
+		  <label asp-for="Status"></label>
+		  <select class="form-control" id="exampleSelect1" asp-for="Status">
+			<option>@ToDo_List.Models.TaskStatus.Created</option>
+			<option>@ToDo_List.Models.TaskStatus.InProcess</option>
+			<option>@ToDo_List.Models.TaskStatus.Doned</option>
+		  </select>
 		</div>
 		<div class="mb-3">
 			<label asp-for="DateStart"></label>
@@ -41,8 +47,8 @@
 			<input asp-for="Deadline" class="form-control" />
 			<span asp-validation-for="Deadline" class="text-danger"></span>
 		</div>
-		<button type="submit" class="btn btn-primary" style="150px">Update!</button>
-		<a asp-controller="ToDoList" asp-action="Index" class="btn btn-secondary" style="150px">Back to list</a>
+		<button type="submit" class="btn btn-primary" style="width: 150px">Update!</button>
+		<a asp-controller="ToDoList" asp-action="Index" class="btn btn-secondary" style="width: 150px">Back to list</a>
 	</div>
 </form>
 
