--- a/Views/ToDoList/Index.cshtml
+++ b/Views/ToDoList/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@model IEnumerable<ToDoList>
 @{
 	ViewData["Title"] = "Index";
+	var createdTasks = Model.Where(x => x.Status == ToDo_List.Models.TaskStatus.Created);
+	var inProcessTasks = Model.Where(x => x.Status == ToDo_List.Models.TaskStatus.InProcess);
+	var donedTasks = Model.Where(x => x.Status == ToDo_List.Models.TaskStatus.Doned);
 }
 <div class="container p-3">
 	<div class="row pt-4">
@@ -13,124 +16,76 @@
 	</div>
 </div>
 </br>
-<!-- <table class = "table table-hover table-bordered">
-	<thead>
-		<tr>
-			<th scope="col">
-				Task
-			</th>
-			<th scope="col">
-				Description
-			</th>
-			<th scope="col">
-				Status
-			</th>
-			<th scope="col">
-				Created Date Time
-			</th>
-			<th scope="col">
-				Date Start
-			</th>
-			<th scope="col">
-				DeadLine
-			</th>
-		</tr>
-	</thead>
-	<tbody>
-	   /* @foreach (var task in Model)
-{
-						<tr class="table-primary">
-						<td width="15%">
-			@task.Content
-						</td>
-						<td width="25%">
-			@task.Description
-						</td>
-						<td width="15%">
-			@task.Status
-						</td>
-						<td width="15%">
-			@task.CreatedDateTime
-						</td>
-						<td width="15%">
-			@task.DateStart
-						</td>
-						<td width="15%">
-			@task.Deadline
-						</td>
-					</tr>
-}
-	</tbody>
-</table>-->
 <div class="container">
-	
-	@foreach (var task in Model)
-	{
-	<div class="row">	
-			@if (task.Status == ToDo_List.Models.TaskStatus.Created)
-			{
-				<div class="card border-primary mb-3 col order-first" style="max-width: 20rem;">
-				  <div class="card-header">Task dated @task.CreatedDateTime</div>
-				  <div class="card-body">
-					<h4 class="card-title">@task.Content</h4>
-					<p class="card-text">Importance: @task.Importance</p>
-					<p class="card-text">Description: @task.Description</p>
-					<p class="card-text">Notes: @task.Note</p>
-					<p class="card-text">Status: @task.Status</p>
-					<p class="card-text">Start: @task.DateStart</p>
-					<p class="card-text">Deadline: @task.Deadline</p>
-					<div class="w-75 btn-group" role="group">
-					  <a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.Id" class="btn btn-outline-info">
-						<i class="bi bi-pencil-square"></i> Edit </a> &nbsp &nbsp;
-					  <a asp-controller="ToDoList" asp-action="Delete" asp-route-id="@task.Id" class="btn btn-outline-danger">
-						<i class="bi bi-trash"></i> Delete</a>
-					</div>
-				  </div>
-				</div>
-			}
-			@if (task.Status == ToDo_List.Models.TaskStatus.InProcess)
-			{
-				<div class="card border-light mb-3 col" style="max-width: 30rem; ">
-				  <div class="card-header">Task dated @task.CreatedDateTime</div>
-				  <div class="card-body">
-					<h4 class="card-title">@task.Content</h4>
-					<p class="card-text">Importance: @task.Importance</p>
-					<p class="card-text">Description: @task.Description</p>
-					<p class="card-text">Notes: @task.Note</p>
-					<p class="card-text">Status: @task.Status</p>
-					<p class="card-text">Start: @task.DateStart</p>
-					<p class="card-text">Deadline: @task.Deadline</p>
-					<div class="w-75 btn-group align-items-center" role="group">
-					  <a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.Id" class="btn btn-outline-info">
-						<i class="bi bi-pencil-square"></i> Edit </a> &nbsp &nbsp;
-					  <a asp-controller="ToDoList" asp-action="Delete" asp-route-id="@task.Id" class="btn btn-outline-danger">
-						<i class="bi bi-trash"></i> Delete</a>
-					</div>
-				  </div>
-				</div>
-			}
-			@if (task.Status == ToDo_List.Models.TaskStatus.Doned)
-			{
-				<div class="card border-success mb-3 col order-last" style="max-width: 30rem; ">
-				  <div class="card-header">Task dated @task.CreatedDateTime</div>
-				  <div class="card-body">
-					<h4 class="card-title">@task.Content</h4>
-					<p class="card-text">Importance: @task.Importance</p>
-					<p class="card-text">Description: @task.Description</p>
-					<p class="card-text">Notes: @task.Note</p>
-					<p class="card-text">Status: @task.Status</p>
-					<p class="card-text">Start: @task.DateStart</p>
-					<p class="card-text">Deadline: @task.Deadline</p>
-					<div class="w-75 btn-group" role="group">
-					  <a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.Id" class="btn btn-outline-info">
-						<i class="bi bi-pencil-square"></i> Edit </a> &nbsp &nbsp;
-					  <a asp-controller="ToDoList" asp-action="Delete" asp-route-id="@task.Id" class="btn btn-outline-danger">
-						<i class="bi bi-trash"></i> Delete</a>
-					</div>
-				  </div>
-				</div>
-			}
-	</div>			
-	}
-	
-</div>  
+<div class="row justify-content-start">
+	<div class="col-4">
+		@foreach (var task in createdTasks)
+		{
+		<div class="card border-primary mb-3" style="max-width: 30rem; min-height: 27rem">
+		  <div class="card-header">Task dated @task.CreatedDateTime</div>
+		  <div class="card-body">
+			<h4 class="card-title">@task.Content</h4>
+			<p class="card-text">Importance: @task.Importance</p>
+			<p class="card-text">Description: @task.Description</p>
+			<p class="card-text">Notes: @task.Note</p>
+			<p class="card-text">Status: @task.Status</p>
+			<p class="card-text">Start: @task.DateStart</p>
+			<p class="card-text">Deadline: @task.Deadline</p>
+			<div class="w-75 btn-group position-absolute" role="group" style="bottom: 10px">
+			  <a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.Id" class="btn btn-outline-info">
+				<i class="bi bi-pencil-square"></i> Edit </a> &nbsp &nbsp;
+			  <a asp-controller="ToDoList" asp-action="Delete" asp-route-id="@task.Id" class="btn btn-outline-danger">
+				<i class="bi bi-trash"></i> Delete</a>
+			</div>
+		  </div>
+		</div>
+		}
+		</div>
+	<div class="col-4">
+		@foreach (var task in inProcessTasks)
+		{
+		<div class="card border-light mb-3" style="max-width: 30rem; min-height: 27rem">
+		  <div class="card-header">Task dated @task.CreatedDateTime</div>
+		  <div class="card-body">
+			<h4 class="card-title">@task.Content</h4>
+			<p class="card-text">Importance: @task.Importance</p>
+			<p class="card-text">Description: @task.Description</p>
+			<p class="card-text">Notes: @task.Note</p>
+			<p class="card-text">Status: @task.Status</p>
+			<p class="card-text">Start: @task.DateStart</p>
+			<p class="card-text">Deadline: @task.Deadline</p>
+			<div class="w-75 btn-group position-absolute" role="group" style="bottom: 10px">
+			  <a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.Id" class="btn btn-outline-info">
+				<i class="bi bi-pencil-square"></i> Edit </a> &nbsp &nbsp;
+			  <a asp-controller="ToDoList" asp-action="Delete" asp-route-id="@task.Id" class="btn btn-outline-danger">
+				<i class="bi bi-trash"></i> Delete</a>
+			</div>
+		  </div>
+		</div>
+		}
+		</div>
+	<div class="col-4">
+		@foreach (var task in donedTasks)
+		{
+		<div class="card border-success mb-3" style="max-width: 30rem; min-height: 27rem">
+		  <div class="card-header">Task dated @task.CreatedDateTime</div>
+		  <div class="card-body">
+			<h4 class="card-title">@task.Content</h4>
+			<p class="card-text">Importance: @task.Importance</p>
+			<p class="card-text">Description: @task.Description</p>
+			<p class="card-text">Notes: @task.Note</p>
+			<p class="card-text">Status: @task.Status</p>
+			<p class="card-text">Start: @task.DateStart</p>
+			<p class="card-text">Deadline: @task.Deadline</p>
+			<div class="w-75 btn-group position-absolute" role="group" style="bottom: 10px">
+			  <a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.Id" class="btn btn-outline-info">
+				<i class="bi bi-pencil-square"></i> Edit </a> &nbsp &nbsp;
+			  <a asp-controller="ToDoList" asp-action="Delete" asp-route-id="@task.Id" class="btn btn-outline-danger">
+				<i class="bi bi-trash"></i> Delete</a>
+			</div>
+		  </div>
+		</div>
+		}
+	</div>
+</div>
+</div>
