--- a/Views/ToDoList/Create.cshtml
+++ b/Views/ToDoList/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model ToDoList
 
-<form method="post">
+<form method="post" enctype="multipart/form-data">
 	<div class="border p-3 mt-4">
 		<div class="row pb-2">
 			<h2 class="text-primary">Create a new task</h2>
 			<hr />
 		</div>
-		<div asp-validation-summary="All"></div>
+		<!--<div asp-validation-summary="All"></div>-->
 		<div class="mb-3">
 			<label asp-for="Content"></label>
 			<input asp-for="Content" class="form-control" />
@@ -38,6 +38,11 @@
 			<label asp-for="Deadline"></label>
 			<input asp-for="Deadline" class="form-control" />
 			<span asp-validation-for="Deadline" class="text-danger"></span>
+		</div>
+		<div class="mb-3">
+			<label asp-for="ImageModel.ImageFile"></label>
+			<input asp-for="ImageModel.ImageFile" class="form-control" accept="image/jpeg,image/jpg"/>
+			<span asp-validation-for="ImageModel.ImageFile" class="text-danger"></span>
 		</div>
 		<button type="submit" class="btn btn-primary" style="width: 150px">Create!</button>
 		<a asp-controller="ToDoList" asp-action="Index" class="btn btn-secondary" style="width: 150px">Back to list</a>
