--- a/Views/ToDoList/Edit.cshtml
+++ b/Views/ToDoList/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ToDoList
 
-<form method="post" asp-action="Edit">
+<form method="post" asp-action="Edit" enctype="multipart/form-data">
 	<div class="border p-3 mt-4">
 		<div class="row pb-2">
 			<h2 class="text-primary">Edit a task</h2>
@@ -46,6 +46,11 @@
 			<label asp-for="Deadline"></label>
 			<input asp-for="Deadline" class="form-control" />
 			<span asp-validation-for="Deadline" class="text-danger"></span>
+		</div>
+		<div class="mb-3">
+			<label asp-for="ImageModel.ImageFile"></label>
+			<input asp-for="ImageModel.ImageFile" class="form-control" accept="image/jpeg,image/jpg"/>
+			<span asp-validation-for="ImageModel.ImageFile" class="text-danger"></span>
 		</div>
 		<button type="submit" class="btn btn-primary" style="width: 150px">Update!</button>
 		<a asp-controller="ToDoList" asp-action="Index" class="btn btn-secondary" style="width: 150px">Back to list</a>
