--- a/Views/ToDoList/Create.cshtml
+++ b/Views/ToDoList/Create.cshtml
@@ -1,12 +1,19 @@
-﻿@model ToDoList
+﻿
+@model ToDoList
 
-<form method="post" enctype="multipart/form-data">
+@{
+	
+}
+
+
+ 
+<form method="post" enctype="multipart/form-data" onload="GetAllTasks()">
 	<div class="border p-3 mt-4">
 		<div class="row pb-2">
 			<h2 class="text-primary">Create a new task</h2>
 			<hr />
 		</div>
-		<!--<div asp-validation-summary="All"></div>-->
+		<div asp-validation-summary="All"></div>
 		<div class="mb-3">
 			<label asp-for="Content"></label>
 			<input asp-for="Content" class="form-control" />
