--- a/Views/ToDoList/Index.cshtml
+++ b/Views/ToDoList/Index.cshtml
@@ -28,6 +28,7 @@
 			<h4 class="card-title">@task.Content</h4>
 			<p class="card-text">Importance: @task.Importance</p>
 			<p class="card-text">Description: @task.Description</p>
+			<p class="card-text">Related task:<a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.RelatedTaskId"> @task.RelatedTaskId</a></p>
 			<p class="card-text">Notes: @task.Note</p>
 			<p class="card-text">Status: @task.Status</p>
 			<p class="card-text">Start: @task.DateStart</p>
@@ -57,6 +58,7 @@
 			<h4 class="card-title">@task.Content</h4>
 			<p class="card-text">Importance: @task.Importance</p>
 			<p class="card-text">Description: @task.Description</p>
+			<p class="card-text">Related task:<a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.RelatedTaskId"> @task.RelatedTaskId</a></p>
 			<p class="card-text">Notes: @task.Note</p>
 			<p class="card-text">Status: @task.Status</p>
 			<p class="card-text">Start: @task.DateStart</p>
@@ -86,6 +88,7 @@
 			<h4 class="card-title">@task.Content</h4>
 			<p class="card-text">Importance: @task.Importance</p>
 			<p class="card-text">Description: @task.Description</p>
+			<p class="card-text">Related task:<a asp-controller="ToDoList" asp-action="Edit" asp-route-id="@task.RelatedTaskId"> @task.RelatedTaskId</a></p>
 			<p class="card-text">Notes: @task.Note</p>
 			<p class="card-text">Status: @task.Status</p>
 			<p class="card-text">Start: @task.DateStart</p>
